# Chisel

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  COMPLETE_PROJECT_DOCUMENTATION.md  CONTRIBUTING.md  GROK_CONNECTORS.md  LLM_Development.md  PLAN_NEXT.md  README.md  exclude_patterns.txt  file_health.json  file_health.md  library.md  monitored_paths.txt  pyproject.toml
.github/workflows/: ci.yml  publish.yml
Logged_issues/: 2026-06-11_directory-scoped-analyze-walks-all-tests.md
chisel/: ast_utils.py  bootstrap.py  cli.py  engine.py  git_analyzer.py  impact.py  import_graph.py  llm_contract.py  mcp_server.py  mcp_stdio.py  metrics.py  next_steps.py  project.py  risk_meta.py  rwlock.py  schemas.py  static_test_imports.py  storage.py  test_mapper.py
docs/: AGENT_PLAYBOOK.md  CUSTOM_EXTRACTORS.md  EXTRACTOR_ECOSYSTEM.md  LLM_CONTRACT.md  ZERO_DEPS.md
examples/: chisel_bootstrap_example.py
examples/extractors/: lsp_symbol_extractor.py  swift_syntax_extractor.py  tree_sitter_js_extractor.py
examples/github-actions/: chisel.yml
findings/: chisel_closed.md
findings/chl_kimi_review_3/: chisel_closed.md
findings/cursor_review_1/: chisel_closed.md
findings/cursor_review_2/: chisel_closed.md
findings/kimi_review_1/: chisel_closed.md
findings/kimi_review_2/: chisel_closed.md
findings/minimax_review_1/: chisel_closed.md
journal/2026/06/: 04.md  11.md
scripts/: benchmark_chisel.py  check_version.py  verify_static_hybrid.py
skills/: SKILL.md
tests/: bootstrap_stub.py  conftest.py  test_ast_utils.py  test_bootstrap.py  test_cli.py  test_engine.py  test_engine_sharding.py  test_git_analyzer.py  test_gitignore_filter.py  test_impact.py  test_import_graph.py  test_language_frameworks.py  test_llm_contract.py  test_mcp_server.py  test_mcp_stdio.py  test_metrics.py  test_next_steps.py  test_project.py  test_rwlock.py  test_static_hybrid.py  test_storage.py  test_test_mapper.py
tests/fixtures/languages/csharp/: BasicTests.cs
tests/fixtures/languages/go/: basic_test.go
tests/fixtures/languages/java/: BasicTest.java
tests/fixtures/languages/rust/: basic.rs
wiki-local/: glossary.md  index.md  spec-project.md
(+1 files in other folders)
