[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chisel"
version = "0.3.2"
description = "Test impact analysis and code intelligence for LLM agents"
requires-python = ">=3.9"
license = "MIT"
dependencies = []

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.1.0"]

[project.scripts]
chisel = "chisel.cli:main"
chisel-mcp = "chisel.mcp_stdio:main"

[tool.setuptools.packages.find]
include = ["chisel*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
