[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chisel-test-impact"
version = "0.6.1"
description = "Test impact analysis and code intelligence for LLM agents"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = []
keywords = [
    "test-impact-analysis", "code-intelligence", "mcp", "llm", "ai-agents",
    "git-analysis", "churn", "risk-map", "test-coverage", "code-ownership",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/IronAdamant/Chisel"
Repository = "https://github.com/IronAdamant/Chisel"
Issues = "https://github.com/IronAdamant/Chisel/issues"

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.1.0"]

[project.scripts]
chisel = "chisel.cli:main"
chisel-mcp = "chisel.mcp_stdio:main"

[tool.setuptools.packages.find]
include = ["chisel*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore:coroutine.*was never awaited:RuntimeWarning",
]

[tool.ruff]
line-length = 100
